# simplyfile

./: CMakeLists.txt  Epoll.cpp  Epoll.h  Event.h  FileDescriptor.cpp  FileDescriptor.h  INotify.cpp  INotify.h  MMap.h  Process.cpp  Process.h  README.md  SerialPort.cpp  SerialPort.h  ThreadTime.cpp  ThreadTime.h  Timer.cpp  Timer.h  simplyfile.pc.in
socket/: Host.cpp  Host.h  Socket.cpp  Socket.h
